plc86/src/Grammar.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 2.0.2 from src/Grammar.y
-----------------------------------------------------------------------------

state 114 contains 1 shift/reduce conflicts.
state 141 contains 1 shift/reduce conflicts.
state 143 contains 1 shift/reduce conflicts.
state 144 contains 1 shift/reduce conflicts.
state 145 contains 6 shift/reduce conflicts.
state 146 contains 1 shift/reduce conflicts.
state 147 contains 1 shift/reduce conflicts.
state 154 contains 1 shift/reduce conflicts.

terminal FROMTABLES is unused
terminal TABLE is unused
terminal digits is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parseCalc -> Start                          (0)
	Start -> '{' Inputs '}' Queries Output             (1)
	Inputs -> Input ',' Inputs                         (2)
	Inputs -> Input                                    (3)
	Input -> INPUT FILE Filename AS TableAssignment    (4)
	TableAssignment -> TableName NOLABELS              (5)
	TableAssignment -> TableName WITHLABELS ColumnLabels   (6)
	TableName -> alphaLower                            (7)
	TableName -> alphaUpper                            (8)
	TableName -> alphaNumericString                    (9)
	ColumnLabels -> '[' ColumnLabels2 ']'              (10)
	ColumnLabels2 -> alphaLower ',' ColumnLabels2      (11)
	ColumnLabels2 -> alphaUpper ',' ColumnLabels2      (12)
	ColumnLabels2 -> alphaNumericString ',' ColumnLabels2   (13)
	ColumnLabels2 -> alphaLower                        (14)
	ColumnLabels2 -> alphaUpper                        (15)
	ColumnLabels2 -> alphaNumericString                (16)
	ColumnReference -> TableName '.' alphaLower        (17)
	ColumnReference -> TableName '.' alphaUpper        (18)
	ColumnReference -> TableName '.' alphaNumericString   (19)
	ColumnReference -> TableName '.' int               (20)
	Output -> OUTPUT TableName TO OutputType           (21)
	OutputType -> STANDARD                             (22)
	OutputType -> FILE Filename                        (23)
	Position -> int ',' int                            (24)
	Axis -> COLUMN int                                 (25)
	Axis -> COLUMN alphaLower                          (26)
	Axis -> COLUMN alphaUpper                          (27)
	Axis -> COLUMN alphaNumericString                  (28)
	Axis -> ROW int                                    (29)
	Queries -> LET TableAssignment BE Query '-' Queries   (30)
	Queries -> QUERIESEND                              (31)
	TableExpression -> TableName                       (32)
	TableExpression -> LET TableAssignment BE Query    (33)
	TableExpression -> LET TableAssignment BE JoinClause   (34)
	TableExpression -> '(' TableExpression ')'         (35)
	Query -> MERGE TableName TableName WITHCONSTRAINT BooleanExpression   (36)
	Query -> Selection                                 (37)
	Query -> PRODUCT TableName TableName               (38)
	Query -> SORT TableName SortClause                 (39)
	Query -> INSERT var TableName Position             (40)
	Query -> FILL var TableName Axis                   (41)
	Query -> DELETE TableName Axis                     (42)
	Query -> CLEAR TableName Position                  (43)
	Query -> ADDBLANKTO TableName Axis                 (44)
	Selection -> SELECT MaxClause Distinct ColumnChoice FROM TableExpression WhereClause PlusClause   (45)
	SortClause -> ASC                                  (46)
	SortClause -> DESC                                 (47)
	MaxClause -> MAX Number                            (48)
	MaxClause ->                                       (49)
	Distinct -> DISTINCT                               (50)
	Distinct ->                                        (51)
	ColumnChoice -> COLUMNS '*'                        (52)
	ColumnChoice -> COLUMN ColumnReference             (53)
	ColumnChoice -> COLUMN ColumnReference ',' ColumnChoice   (54)
	WhereClause -> WHERE BooleanExpression             (55)
	WhereClause ->                                     (56)
	PlusClause -> PLUS Selection                       (57)
	PlusClause ->                                      (58)
	JoinClause -> TableExpression JoinOperator TableExpression WITHCONSTRAINT BooleanExpression   (59)
	JoinOperator -> INNER JOIN                         (60)
	JoinOperator -> LEFT JOIN                          (61)
	JoinOperator -> RIGHT JOIN                         (62)
	JoinOperator -> FULL JOIN                          (63)
	BooleanExpression -> '(' BooleanExpression ')'     (64)
	BooleanExpression -> BooleanExpression AND BooleanExpression   (65)
	BooleanExpression -> BooleanExpression OR BooleanExpression   (66)
	BooleanExpression -> NOT BooleanExpression         (67)
	BooleanExpression -> BooleanExpression EQ BooleanExpression   (68)
	BooleanExpression -> SubExpression '=' SubExpression   (69)
	BooleanExpression -> IndexExpression "==" IndexExpression   (70)
	SubExpression -> ColumnReference                   (71)
	SubExpression -> var                               (72)
	IndexExpression -> INDEX                           (73)
	IndexExpression -> Number                          (74)
	IndexExpression -> '(' IndexExpression ')'         (75)
	IndexExpression -> IndexExpression '+' IndexExpression   (76)
	IndexExpression -> IndexExpression '-' IndexExpression   (77)
	IndexExpression -> IndexExpression '*' IndexExpression   (78)
	IndexExpression -> IndexExpression '//' IndexExpression   (79)
	IndexExpression -> IndexExpression '%' IndexExpression   (80)
	IndexExpression -> IndexExpression '^' IndexExpression   (81)
	Number -> positiveNum                              (82)
	Number -> negativeNum                              (83)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	INPUT          { PT _ TokenINPUT }
	OUTPUT         { PT _ TokenOUTPUT }
	LET            { PT _ TokenLET }
	BE             { PT _ TokenBE }
	QUERIESEND     { PT _ TokenQueriesEnd }
	MERGE          { PT _ TokenMERGE }
	SELECT         { PT _ TokenSELECT }
	TO             { PT _ TokenTO }
	STANDARD       { PT _ TokenSTANDARD }
	FILE           { PT _ TokenFILE }
	PRODUCT        { PT _ TokenPRODUCT }
	SORT           { PT _ TokenSORT }
	INSERT         { PT _ TokenINSERT }
	FILL           { PT _ TokenFILL }
	DELETE         { PT _ TokenDELETE }
	CLEAR          { PT _ TokenCLEAR }
	COLUMN         { PT _ TokenCOLUMN }
	COLUMNS        { PT _ TokenCOLUMNS }
	ROW            { PT _ TokenROW }
	FROMTABLES     { PT _ TokenFROMTABLES }
	FROM           { PT _ TokenFROM }
	JOIN           { PT _ TokenJOIN }
	INNER          { PT _ TokenINNER }
	LEFT           { PT _ TokenLEFT }
	RIGHT          { PT _ TokenRIGHT }
	FULL           { PT _ TokenFULL }
	TABLE          { PT _ TokenTABLE }
	AS             { PT _ TokenAS }
	WITHLABELS     { PT _ TokenWITHLABELS }
	NOLABELS       { PT _ TokenNOLABELS }
	WHERE          { PT _ TokenWHERE }
	WITHCONSTRAINT { PT _ TokenWITHCONSTRAINT }
	AND            { PT _ TokenAND }
	OR             { PT _ TokenOR }
	NOT            { PT _ TokenNOT }
	EQ             { PT _ TokenEQ }
	INDEX          { PT _ TokenINDEX }
	MAX            { PT _ TokenMAX }
	PLUS           { PT _ TokenPLUSWORD }
	DISTINCT       { PT _ TokenDISTINCT }
	ASC            { PT _ TokenASC }
	DESC           { PT _ TokenDESC }
	ADDBLANKTO     { PT _ TokenADDBLANKTO }
	'='            { PT _ TokenEQUAL }
	"=="           { PT _ TokenEQUIVALENT }
	'+'            { PT _ TokenPLUS }
	'*'            { PT _ TokenMULTIPLY }
	'//'           { PT _ TokenDIVTWO }
	'%'            { PT _ TokenPERCENT }
	'^'            { PT _ TokenEXP }
	'{'            { PT _ TokenSquigleBracketL }
	'}'            { PT _ TokenSquigleBracketR }
	'-'            { PT _ TokenDash }
	','            { PT _ TokenComma }
	'['            { PT _ TokenSquareBracketL }
	']'            { PT _ TokenSquareBracketR }
	'.'            { PT _ TokenDot }
	'('            { PT _ TokenBracketL }
	')'            { PT _ TokenBracketR }
	int            { PT _ (TokenInt $$) }
	alphaLower     { PT _ (TokenAlphaLower $$) }
	alphaUpper     { PT _ (TokenAlphaUpper $$) }
	digits         { PT _ (TokenDigits $$) }
	Filename       { PT _ (TokenFilename $$) }
	alphaNumericString{ PT _ (TokenAlphaNumericString $$) }
	positiveNum    { PT _ (TokenPositiveNumber $$) }
	negativeNum    { PT _ (TokenNegativeNumber $$) }
	var            { PT _ (TokenString $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parseCalc rule  0
	Start           rule  1
	Inputs          rules 2, 3
	Input           rule  4
	TableAssignment rules 5, 6
	TableName       rules 7, 8, 9
	ColumnLabels    rule  10
	ColumnLabels2   rules 11, 12, 13, 14, 15, 16
	ColumnReference rules 17, 18, 19, 20
	Output          rule  21
	OutputType      rules 22, 23
	Position        rule  24
	Axis            rules 25, 26, 27, 28, 29
	Queries         rules 30, 31
	TableExpression rules 32, 33, 34, 35
	Query           rules 36, 37, 38, 39, 40, 41, 42, 43, 44
	Selection       rule  45
	SortClause      rules 46, 47
	MaxClause       rules 48, 49
	Distinct        rules 50, 51
	ColumnChoice    rules 52, 53, 54
	WhereClause     rules 55, 56
	PlusClause      rules 57, 58
	JoinClause      rule  59
	JoinOperator    rules 60, 61, 62, 63
	BooleanExpression rules 64, 65, 66, 67, 68, 69, 70
	SubExpression   rules 71, 72
	IndexExpression rules 73, 74, 75, 76, 77, 78, 79, 80, 81
	Number          rules 82, 83

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_parseCalc -> . Start                         (rule 0)

	'{'            shift, and enter state 2

	Start          goto state 3

State 1

	Start -> . '{' Inputs '}' Queries Output            (rule 1)

	'{'            shift, and enter state 2


State 2

	Start -> '{' . Inputs '}' Queries Output            (rule 1)

	INPUT          shift, and enter state 6

	Inputs         goto state 4
	Input          goto state 5

State 3

	%start_parseCalc -> Start .                         (rule 0)

	%eof           accept


State 4

	Start -> '{' Inputs . '}' Queries Output            (rule 1)

	'}'            shift, and enter state 9


State 5

	Inputs -> Input . ',' Inputs                        (rule 2)
	Inputs -> Input .                                   (rule 3)

	'}'            reduce using rule 3
	','            shift, and enter state 8


State 6

	Input -> INPUT . FILE Filename AS TableAssignment    (rule 4)

	FILE           shift, and enter state 7


State 7

	Input -> INPUT FILE . Filename AS TableAssignment    (rule 4)

	Filename       shift, and enter state 14


State 8

	Inputs -> Input ',' . Inputs                        (rule 2)

	INPUT          shift, and enter state 6

	Inputs         goto state 13
	Input          goto state 5

State 9

	Start -> '{' Inputs '}' . Queries Output            (rule 1)

	LET            shift, and enter state 11
	QUERIESEND     shift, and enter state 12

	Queries        goto state 10

State 10

	Start -> '{' Inputs '}' Queries . Output            (rule 1)

	OUTPUT         shift, and enter state 22

	Output         goto state 21

State 11

	Queries -> LET . TableAssignment BE Query '-' Queries    (rule 30)

	alphaLower     shift, and enter state 18
	alphaUpper     shift, and enter state 19
	alphaNumericStringshift, and enter state 20

	TableAssignmentgoto state 16
	TableName      goto state 17

State 12

	Queries -> QUERIESEND .                             (rule 31)

	OUTPUT         reduce using rule 31


State 13

	Inputs -> Input ',' Inputs .                        (rule 2)

	'}'            reduce using rule 2


State 14

	Input -> INPUT FILE Filename . AS TableAssignment    (rule 4)

	AS             shift, and enter state 15


State 15

	Input -> INPUT FILE Filename AS . TableAssignment    (rule 4)

	alphaLower     shift, and enter state 18
	alphaUpper     shift, and enter state 19
	alphaNumericStringshift, and enter state 20

	TableAssignmentgoto state 27
	TableName      goto state 17

State 16

	Queries -> LET TableAssignment . BE Query '-' Queries    (rule 30)

	BE             shift, and enter state 26


State 17

	TableAssignment -> TableName . NOLABELS             (rule 5)
	TableAssignment -> TableName . WITHLABELS ColumnLabels    (rule 6)

	WITHLABELS     shift, and enter state 24
	NOLABELS       shift, and enter state 25


State 18

	TableName -> alphaLower .                           (rule 7)

	TO             reduce using rule 7
	COLUMN         reduce using rule 7
	ROW            reduce using rule 7
	INNER          reduce using rule 7
	LEFT           reduce using rule 7
	RIGHT          reduce using rule 7
	FULL           reduce using rule 7
	WITHLABELS     reduce using rule 7
	NOLABELS       reduce using rule 7
	WHERE          reduce using rule 7
	WITHCONSTRAINT reduce using rule 7
	PLUS           reduce using rule 7
	ASC            reduce using rule 7
	DESC           reduce using rule 7
	'-'            reduce using rule 7
	'.'            reduce using rule 7
	')'            reduce using rule 7
	int            reduce using rule 7
	alphaLower     reduce using rule 7
	alphaUpper     reduce using rule 7
	alphaNumericStringreduce using rule 7


State 19

	TableName -> alphaUpper .                           (rule 8)

	TO             reduce using rule 8
	COLUMN         reduce using rule 8
	ROW            reduce using rule 8
	INNER          reduce using rule 8
	LEFT           reduce using rule 8
	RIGHT          reduce using rule 8
	FULL           reduce using rule 8
	WITHLABELS     reduce using rule 8
	NOLABELS       reduce using rule 8
	WHERE          reduce using rule 8
	WITHCONSTRAINT reduce using rule 8
	PLUS           reduce using rule 8
	ASC            reduce using rule 8
	DESC           reduce using rule 8
	'-'            reduce using rule 8
	'.'            reduce using rule 8
	')'            reduce using rule 8
	int            reduce using rule 8
	alphaLower     reduce using rule 8
	alphaUpper     reduce using rule 8
	alphaNumericStringreduce using rule 8


State 20

	TableName -> alphaNumericString .                   (rule 9)

	TO             reduce using rule 9
	COLUMN         reduce using rule 9
	ROW            reduce using rule 9
	INNER          reduce using rule 9
	LEFT           reduce using rule 9
	RIGHT          reduce using rule 9
	FULL           reduce using rule 9
	WITHLABELS     reduce using rule 9
	NOLABELS       reduce using rule 9
	WHERE          reduce using rule 9
	WITHCONSTRAINT reduce using rule 9
	PLUS           reduce using rule 9
	ASC            reduce using rule 9
	DESC           reduce using rule 9
	'-'            reduce using rule 9
	'.'            reduce using rule 9
	')'            reduce using rule 9
	int            reduce using rule 9
	alphaLower     reduce using rule 9
	alphaUpper     reduce using rule 9
	alphaNumericStringreduce using rule 9


State 21

	Start -> '{' Inputs '}' Queries Output .            (rule 1)

	%eof           reduce using rule 1


State 22

	Output -> OUTPUT . TableName TO OutputType          (rule 21)

	alphaLower     shift, and enter state 18
	alphaUpper     shift, and enter state 19
	alphaNumericStringshift, and enter state 20

	TableName      goto state 23

State 23

	Output -> OUTPUT TableName . TO OutputType          (rule 21)

	TO             shift, and enter state 41


State 24

	TableAssignment -> TableName WITHLABELS . ColumnLabels    (rule 6)

	'['            shift, and enter state 40

	ColumnLabels   goto state 39

State 25

	TableAssignment -> TableName NOLABELS .             (rule 5)

	BE             reduce using rule 5
	'}'            reduce using rule 5
	','            reduce using rule 5


State 26

	Queries -> LET TableAssignment BE . Query '-' Queries    (rule 30)

	MERGE          shift, and enter state 30
	SELECT         shift, and enter state 31
	PRODUCT        shift, and enter state 32
	SORT           shift, and enter state 33
	INSERT         shift, and enter state 34
	FILL           shift, and enter state 35
	DELETE         shift, and enter state 36
	CLEAR          shift, and enter state 37
	ADDBLANKTO     shift, and enter state 38

	Query          goto state 28
	Selection      goto state 29

State 27

	Input -> INPUT FILE Filename AS TableAssignment .    (rule 4)

	'}'            reduce using rule 4
	','            reduce using rule 4


State 28

	Queries -> LET TableAssignment BE Query . '-' Queries    (rule 30)

	'-'            shift, and enter state 59


State 29

	Query -> Selection .                                (rule 37)

	INNER          reduce using rule 37
	LEFT           reduce using rule 37
	RIGHT          reduce using rule 37
	FULL           reduce using rule 37
	WHERE          reduce using rule 37
	WITHCONSTRAINT reduce using rule 37
	PLUS           reduce using rule 37
	'-'            reduce using rule 37
	')'            reduce using rule 37


State 30

	Query -> MERGE . TableName TableName WITHCONSTRAINT BooleanExpression    (rule 36)

	alphaLower     shift, and enter state 18
	alphaUpper     shift, and enter state 19
	alphaNumericStringshift, and enter state 20

	TableName      goto state 58

State 31

	Selection -> SELECT . MaxClause Distinct ColumnChoice FROM TableExpression WhereClause PlusClause    (rule 45)

	COLUMN         reduce using rule 49
	COLUMNS        reduce using rule 49
	MAX            shift, and enter state 57
	DISTINCT       reduce using rule 49

	MaxClause      goto state 56

State 32

	Query -> PRODUCT . TableName TableName              (rule 38)

	alphaLower     shift, and enter state 18
	alphaUpper     shift, and enter state 19
	alphaNumericStringshift, and enter state 20

	TableName      goto state 55

State 33

	Query -> SORT . TableName SortClause                (rule 39)

	alphaLower     shift, and enter state 18
	alphaUpper     shift, and enter state 19
	alphaNumericStringshift, and enter state 20

	TableName      goto state 54

State 34

	Query -> INSERT . var TableName Position            (rule 40)

	var            shift, and enter state 53


State 35

	Query -> FILL . var TableName Axis                  (rule 41)

	var            shift, and enter state 52


State 36

	Query -> DELETE . TableName Axis                    (rule 42)

	alphaLower     shift, and enter state 18
	alphaUpper     shift, and enter state 19
	alphaNumericStringshift, and enter state 20

	TableName      goto state 51

State 37

	Query -> CLEAR . TableName Position                 (rule 43)

	alphaLower     shift, and enter state 18
	alphaUpper     shift, and enter state 19
	alphaNumericStringshift, and enter state 20

	TableName      goto state 50

State 38

	Query -> ADDBLANKTO . TableName Axis                (rule 44)

	alphaLower     shift, and enter state 18
	alphaUpper     shift, and enter state 19
	alphaNumericStringshift, and enter state 20

	TableName      goto state 49

State 39

	TableAssignment -> TableName WITHLABELS ColumnLabels .    (rule 6)

	BE             reduce using rule 6
	'}'            reduce using rule 6
	','            reduce using rule 6


State 40

	ColumnLabels -> '[' . ColumnLabels2 ']'             (rule 10)

	alphaLower     shift, and enter state 46
	alphaUpper     shift, and enter state 47
	alphaNumericStringshift, and enter state 48

	ColumnLabels2  goto state 45

State 41

	Output -> OUTPUT TableName TO . OutputType          (rule 21)

	STANDARD       shift, and enter state 43
	FILE           shift, and enter state 44

	OutputType     goto state 42

State 42

	Output -> OUTPUT TableName TO OutputType .          (rule 21)

	%eof           reduce using rule 21


State 43

	OutputType -> STANDARD .                            (rule 22)

	%eof           reduce using rule 22


State 44

	OutputType -> FILE . Filename                       (rule 23)

	Filename       shift, and enter state 83


State 45

	ColumnLabels -> '[' ColumnLabels2 . ']'             (rule 10)

	']'            shift, and enter state 82


State 46

	ColumnLabels2 -> alphaLower . ',' ColumnLabels2     (rule 11)
	ColumnLabels2 -> alphaLower .                       (rule 14)

	','            shift, and enter state 81
	']'            reduce using rule 14


State 47

	ColumnLabels2 -> alphaUpper . ',' ColumnLabels2     (rule 12)
	ColumnLabels2 -> alphaUpper .                       (rule 15)

	','            shift, and enter state 80
	']'            reduce using rule 15


State 48

	ColumnLabels2 -> alphaNumericString . ',' ColumnLabels2    (rule 13)
	ColumnLabels2 -> alphaNumericString .               (rule 16)

	','            shift, and enter state 79
	']'            reduce using rule 16


State 49

	Query -> ADDBLANKTO TableName . Axis                (rule 44)

	COLUMN         shift, and enter state 74
	ROW            shift, and enter state 75

	Axis           goto state 78

State 50

	Query -> CLEAR TableName . Position                 (rule 43)

	int            shift, and enter state 77

	Position       goto state 76

State 51

	Query -> DELETE TableName . Axis                    (rule 42)

	COLUMN         shift, and enter state 74
	ROW            shift, and enter state 75

	Axis           goto state 73

State 52

	Query -> FILL var . TableName Axis                  (rule 41)

	alphaLower     shift, and enter state 18
	alphaUpper     shift, and enter state 19
	alphaNumericStringshift, and enter state 20

	TableName      goto state 72

State 53

	Query -> INSERT var . TableName Position            (rule 40)

	alphaLower     shift, and enter state 18
	alphaUpper     shift, and enter state 19
	alphaNumericStringshift, and enter state 20

	TableName      goto state 71

State 54

	Query -> SORT TableName . SortClause                (rule 39)

	ASC            shift, and enter state 69
	DESC           shift, and enter state 70

	SortClause     goto state 68

State 55

	Query -> PRODUCT TableName . TableName              (rule 38)

	alphaLower     shift, and enter state 18
	alphaUpper     shift, and enter state 19
	alphaNumericStringshift, and enter state 20

	TableName      goto state 67

State 56

	Selection -> SELECT MaxClause . Distinct ColumnChoice FROM TableExpression WhereClause PlusClause    (rule 45)
